--- a/bstore-front/src/app/display-orders/display-orders.component.html
+++ b/bstore-front/src/app/display-orders/display-orders.component.html
@@ -23,11 +23,11 @@
   <ng-container matColumnDef="invoice">
     <th mat-header-cell *matHeaderCellDef> Invoice </th>
     <td mat-cell *matCellDef="let order; let row = index" >
-      <button mat-button (click)="getInvoice(order)">Invoice</button>
+      <button mat-button (click)="getInvoice($event, order)">Invoice</button>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="showOrder($event)">
   </tr>
 </table>
